--- a/Assignment_2_1_Scrape_wikipedia_page.ipynb
+++ b/Assignment_2_1_Scrape_wikipedia_page.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Scrape Wikipedia Page\n",
     "Srape the list of postal codes of Canada"
    ]
   },
@@ -15,13 +16,12 @@
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
-    "import requests\n",
-    "import lxml"
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "4      M5A  Downtown Toronto      Harbourfront"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "15      M4B         East York  Woodbine Gardens"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -347,56 +347,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>M1B</td>\n",
-       "      <td>Scarborough</td>\n",
-       "      <td>Rouge, Malvern</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>M1C</td>\n",
-       "      <td>Scarborough</td>\n",
-       "      <td>Highland Creek, Rouge Hill, Port Union</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>M1E</td>\n",
-       "      <td>Scarborough</td>\n",
-       "      <td>Guildwood, Morningside, West Hill</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>M1G</td>\n",
-       "      <td>Scarborough</td>\n",
-       "      <td>Woburn</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>M1H</td>\n",
-       "      <td>Scarborough</td>\n",
-       "      <td>Cedarbrae</td>\n",
+       "      <th>53</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Harbourfront, Regent Park</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Postcode      Borough                            Neighborhood\n",
-       "0      M1B  Scarborough                          Rouge, Malvern\n",
-       "1      M1C  Scarborough  Highland Creek, Rouge Hill, Port Union\n",
-       "2      M1E  Scarborough       Guildwood, Morningside, West Hill\n",
-       "3      M1G  Scarborough                                  Woburn\n",
-       "4      M1H  Scarborough                               Cedarbrae"
+       "   Postcode           Borough               Neighborhood\n",
+       "53      M5A  Downtown Toronto  Harbourfront, Regent Park"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_group = df.groupby( ['Postcode', 'Borough'] )['Neighborhood'].apply( ', '.join ).reset_index()\n",
-    "df_group.head()"
+    "df_group.loc[df_group['Postcode'] == 'M5A']"
    ]
   },
   {
@@ -408,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +389,7 @@
        "(103, 3)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
